--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
     </parent>
 
 
-    <artifactId>ddos-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>ddos-app2</artifactId>
+    <version>2.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <description>ONOS OSGi bundle archetype</description>
@@ -34,9 +34,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <onos.version>2.1.0</onos.version>
-        <onos.app.name>org.ddosmodule.app</onos.app.name>
-        <onos.app.title>DDOS App</onos.app.title>
-        <onos.app.origin>DDOS, Inc.</onos.app.origin>
+        <onos.app.name>org.ddosmodule.app2</onos.app.name>
+        <onos.app.title>DDOS App2</onos.app.title>
+        <onos.app.origin>DDOS - 2020, Inc.</onos.app.origin>
         <onos.app.category>default</onos.app.category>
         <onos.app.url>http://onosproject.org</onos.app.url>
         <onos.app.readme>ONOS OSGi bundle archetype.</onos.app.readme>
